<resources>
    <string name="app_name">EighthGradeStandAlone</string>
    <string name="LogOnInstruction">Please enter your admin log and password. If this is your first log on select the Register Button.</string>
    <string name="adminId">Admin ID</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="studentID">12345678</string>
    <string name="password">Password</string>
    <string name="LogOnStudent">Please enter your student ID and the Password given to you from your instructor</string>
    <string name="logOn">Log On</string>
    <string name="enterStudentInfo">Please Enter the Students ID number.</string>
    <string name="stdFirstName">Student First Name: </string>
    <string name="stdLastName">Student Last Name:</string>
    <string name="infoNotMain">Information Not Maintained</string>
    <string name="savebutton">SAVE</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="editButton">edit</string>
    <string name="editbutton">Edit</string>
    <string name="listView">List</string>
    <string name="stdNameFirst">Student\'s First Name</string>
    <string name="lastName2">Student\'s Last Name</string>
    <string name="studentIDtext">Student ID</string>
    <string name="purchaseOpt">Purchase Options</string>
    <string name="shirt">Shirt</string>
    <string name="shirtsize">Size Selected</string>
    <string name="cost">Cost</string>
    <string name="AmtDue">AmtDue</string>
    <string name="sixFlags">Six Flags</string>
    <string name="small">Small</string>
    <string name="med">medium</string>
    <string name="large">Large</string>
    <string name="foodPackage">Food Package</string>
    <string name="amountPaid">Amount Paid</string>
    <string name="title_activity_student_input_data">StudentInputData</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="adminFirst">Admin\'s First Name</string>
    <string name="adminLastName">Admin\'s Last Name</string>
    <string name="drop">To drop the database and loose all data please enter Admin ID, Password and select Delete Database</string>
</resources>