<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".AdminDropDatabase">

    <Button
        android:id="@+id/buttonLogOn2"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="159dp"
        android:text="@string/logOn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stdLoginLayout" />

    <LinearLayout
        android:id="@+id/stdLoginLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="104dp"

        android:orientation="vertical"
        app:layout_constraintCircleRadius="@dimen/cardview_default_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </LinearLayout>

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="Register"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="599dp" />

    <Button
        android:id="@+id/buttonMain2"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="Main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.661" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/gradient_background_yellow"
        android:text="@string/drop"
        android:textAlignment="center"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAdminID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/adminId"
        android:inputType="textPersonName"
        android:textColor="@color/sunflower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="402dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editAdminID"
        tools:layout_editor_absoluteX="100dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="4dp"
        android:text="@string/adminId"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editAdminID"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editNumberPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textColor="@color/sunflower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="472dp" />

</androidx.constraintlayout.widget.ConstraintLayout>