<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminLogOn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hunter"
    android:textAlignment="center"
    tools:context=".AdminLogOn">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/LogOnInstruction"
        android:textAlignment="center"
        android:textColor="@color/sunflower"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editAdminID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="104dp"
        android:ems="10"
        android:hint="@string/adminId"
        android:inputType="textPersonName"
        android:textColor="@color/sunflower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editNumberPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:textColor="@color/sunflower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAdminID" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/schoollogo" />

    <Button
        android:id="@+id/buttonLogOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="159dp"
        android:text="@string/logOn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumberPW" />

    <Button
        android:id="@+id/initializeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="initialize"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="605dp" />

</androidx.constraintlayout.widget.ConstraintLayout>