<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentData">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".AdminInputData">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bttnPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="Payment" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bttnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="Logout" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textCostSF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="132dp"
                    android:layout_marginTop="108dp"
                    android:text="@string/cost"
                    android:textColor="@color/sunflower"
                    android:textSize="@dimen/text_size_lg"
                    app:layout_constraintStart_toEndOf="@+id/textFoodPackage"
                    app:layout_constraintTop_toBottomOf="@+id/textCostFP" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="100dp"
                    android:text="@string/sixFlags"
                    android:textColor="@color/sunflower"
                    android:textSize="@dimen/text_size_lg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textFoodPackage" />

                <TextView
                    android:id="@+id/textFoodPackage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="116dp"
                    android:text="@string/foodPackage"
                    android:textColor="@color/sunflower"
                    android:textSize="@dimen/text_size_lg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textCostFP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="116dp"
                    android:text="@string/cost"
                    android:textColor="@color/sunflower"
                    android:textSize="@dimen/text_size_lg"
                    app:layout_constraintStart_toEndOf="@+id/textFoodPackage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textAmountPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="209dp"
                    android:layout_marginEnd="148dp"
                    android:text="@string/amountPaid"
                    android:textColor="@color/sunflower"
                    android:textSize="@dimen/text_size_lg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textFoodPackage" />

                <TextView
                    android:id="@+id/showFoodCost"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="56dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCostFP" />

                <TextView
                    android:id="@+id/showSFcost"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="56dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textCostSF" />

                <TextView
                    android:id="@+id/showAmountDue"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="177dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textAmountDue" />

                <TextView
                    android:id="@+id/showAmountPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="177dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textAmountPaid" />

                <TextView
                    android:id="@+id/textAmountDue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="166dp"
                    android:text="@string/AmtDue"
                    android:textColor="@color/sunflower"
                    android:textSize="@dimen/text_size_lg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/showAmountPaid" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>